--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,13 @@ BOT_TOKEN=your_bot_token_here
 DEEPSEEK_API_KEY=your_deepseek_api_key_here
 DEEPSEEK_MODEL=deepseek-chat
 MAX_MESSAGES_TO_FETCH=10
+
+# MongoDB settings (for migration only)
 MONGODB_URL=mongodb://admin:password@localhost:27017
 MONGODB_DATABASE=telegram_bot
+
+# Vector database settings
+CHROMA_HOST=localhost
+CHROMA_PORT=8000
+EMBEDDING_MODEL=all-MiniLM-L6-v2
+VECTOR_SEARCH_LIMIT=10
